--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main class="container-fluid grow text-light bg-secondary">
     <div class="row justify-content-around py-5 d-flex">
       <div class="col-md-3 order-last order-md-first bg-dark shadow-sm text-center d-flex flex-column p-0">
-        <div class="flex-fill sml-hidden" id="fleet-icons">
+        <div class="flex-fill text-left sml-hidden" id="fleet-icons">
         </div>
         <div class="row bg-light m-0 p-0">
           <div class="col-6">
@@ -52,7 +52,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3 bg-dark d-flex flex-column shadow-sm py-4 px-4" id="buttons">
+      <div class="col-md-3 bg-dark d-flex flex-column shadow-sm py-4 px-4 shop-col-scroll" id="buttons">
       </div>
     </div>
   </main>
