--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     </div>
   </header>
   <main class="container-fluid grow text-light bg-secondary">
-    <div class="row justify-content-around py-5 d-flex">
-      <div class="col-md-3 order-last order-md-first bg-dark shadow-sm text-center d-flex flex-column p-0">
+    <div class="row justify-content-around add-padding rmv-padding d-flex">
+      <div
+        class="col-md-3 order-last order-md-first add-sm-border bg-dark shadow-sm text-center d-flex flex-column p-0">
         <div class="flex-fill text-left sml-hidden" id="fleet-icons">
         </div>
         <div class="row bg-light m-0 p-0">
@@ -45,14 +46,14 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4 shadow-sm align-self-start">
+      <div class="col-md-4 shadow-sm align-self-start add-sm-border">
         <div class="row hero-img align-items-center justify-content-center">
           <div class="col-12 d-flex justify-content-center">
             <img class="click-img" src="pics/box.png" onclick="mine()" alt="clicker-img">
           </div>
         </div>
       </div>
-      <div class="col-md-3 bg-dark d-flex flex-column shadow-sm py-4 px-4 shop-col-scroll" id="buttons">
+      <div class="col-md-3 bg-dark d-flex flex-column shadow-sm add-sm-border py-4 px-4 shop-col-scroll" id="buttons">
       </div>
     </div>
   </main>
