--- a/index.html
+++ b/index.html
@@ -31,17 +31,8 @@
         <div class="flex-fill text-left sml-hidden" id="fleet-icons">
         </div>
         <div class="row bg-light m-0 p-0">
-          <div class="col-6">
+          <div class="col pb-3 px-3">
             <div class=" bg-light bottom-col text-dark text-left" id="fleet-counts">
-
-            </div>
-          </div>
-          <div class="col-6  text-left d-flex justify-content-center align-items-center" id="badge">
-            <div class="text-dark bg-light">
-              <img src="pics/maverick.png" class="badge-img" alt="">
-              <img src="pics/sparrow.png" class="badge-img" alt="">
-              <img src="pics/maverick.png" class="badge-img" alt="">
-              <img src="pics/sparrow.png" class="badge-img" alt="">
             </div>
           </div>
         </div>
@@ -58,7 +49,7 @@
     </div>
   </main>
   <footer class="text-center py-2">
-    <p class="p-0">Made with ❤ by Amanda Rice</p>
+    <p class="p-0">Made by Amanda Rice ❤</p>
   </footer>
   <script src="script.js"></script>
 </body>
