--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <header class="container-fluid bg-light text-dark">
+  <header class="container-fluid bg-light text-dark sticky-top">
     <div class="row align-items-start">
       <div class="col pt-2 text-center align-items-center">
         <h2 class="p-0">Package Count: <span class="text-break" id="package-count"></span></h2>
@@ -40,7 +40,7 @@
       <div class="col-md-4 shadow-sm align-self-start add-sm-border">
         <div class="row hero-img align-items-center justify-content-center">
           <div class="col-12 d-flex justify-content-center">
-            <img class="click-img" src="pics/box.png" onclick="mine()" alt="clicker-img">
+            <img class="click-img" src="pics/box.png" onclick="mine()" alt="Box">
           </div>
         </div>
       </div>
